Changes:

Version 2.0:
- Changed CtagsInterface to use a Lucene index for the tag information instead
  of a relational database. This was done mainly to improve performance of
  queries that need to check substrings of the values in the database.
  As a result, dynamic action queries (which used to be in SQL) need to be
  replaced by Lucene queries.
- Added progress indication while tagging. A new dockable shows the Ctags
  verbose output. Each tagging task has its own tab in the dockable, and there
  is an option to automatically close the tab when the tagging is over.
- All tagging is done in the background, so the option for background tagging
  was removed.

Version 1.1:
- Fixed an NPE when the tag database is not configured correctly
  or not installed correctly.
- Added an action for adding the current file to the tag DB.
- Updated the plugin to use the new edit bus annotated handlers.
- Fixed a bug when jumping to a file which has changed since it was last
  tagged. If the file has changed, and the "update on load" option is set,
  the tags will be automatically updated when the file is loaded, however
  the jumping will be based on the outdated tag. So, when jumping to a tag
  when this option is set, first open the file and wait for the tags to be
  updated, then rerun the query (complex, because it needs to find the same
  tag exactly, if the user selected one of several), and jump to the updated
  version.
- Fixed the query for the "quick search tag" dialog.
- Removed the lousy attempt to provide "completion by context".
- Better integration with Navigator - when jumping to a tag in
  another buffer, prevent Navigator from recording the initial buffer position
  (either the beginning of the buffer or the position when the buffer was last
  closed), so it only records the positions before and after the jump.
  Navigator is now an optional dependency of CtagsInterface.
- Prevent adding the same origin record twice to the ORIGINS table.